add rxswift bind sample

--- a/RxSwiftSample/Base.lproj/Main.storyboard
+++ b/RxSwiftSample/Base.lproj/Main.storyboard
@@ -15,12 +15,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K6n-pK-q8m">
-                                <rect key="frame" x="160.5" y="164" width="93" height="36"/>
-                                <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="35"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="43" translatesAutoresizingMaskIntoConstraints="NO" id="XTp-pC-uHB">
+                                <rect key="frame" x="160.5" y="164" width="93" height="128.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K6n-pK-q8m">
+                                        <rect key="frame" x="0.0" y="0.0" width="93" height="35.5"/>
+                                        <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="35"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Jsi-Ix-lrV">
+                                        <rect key="frame" x="0.0" y="78.5" width="93" height="50"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tjA-H4-ij5">
                                 <rect key="frame" x="168" y="430.5" width="78" height="35"/>
                                 <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="23"/>
@@ -30,12 +40,17 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="tjA-H4-ij5" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="7OW-x8-2Aj"/>
-                            <constraint firstItem="K6n-pK-q8m" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DLT-bl-I9q"/>
+                            <constraint firstItem="XTp-pC-uHB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="MwD-VY-ef0"/>
+                            <constraint firstItem="XTp-pC-uHB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="120" id="UzM-IO-THr"/>
                             <constraint firstItem="tjA-H4-ij5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gVc-T8-5Js"/>
-                            <constraint firstItem="K6n-pK-q8m" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="120" id="iNM-47-RHL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="inputButton" destination="tjA-H4-ij5" id="448-Jm-RvR"/>
+                        <outlet property="inputTextField" destination="Jsi-Ix-lrV" id="L9e-Zy-2G5"/>
+                        <outlet property="outputLabel" destination="K6n-pK-q8m" id="AcN-yK-lee"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
